additional fix
Fixing horizontal scrolling

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,13 +8,13 @@
 
 @media screen and (max-width: 1023px) {
   .intro__title {
-    margin: 92px auto 40px 48px;
+    margin: 92px 48px 40px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro__title {
-    margin: 88px auto 40px auto;
+    margin: 88px 24px 40px;
   }
 }
 
