--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -21,14 +21,21 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 820px) {
   .lead__image {
     max-height: 397px;
     max-width: 636px;
   }
 }
 
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 700px) {
+  .lead__image {
+    max-height: 397px;
+    max-width: 536px;
+  }
+}
+
+@media screen and (max-width: 595px) {
   .lead__image {
     max-height: 200px;
     max-width: 320px;
